Adapt for the macOS Apple Clang compilation environment.(milvus-local)
Signed-off-by: Yusheng.Ma <yusheng.ma@zilliz.com>

--- a/internal/core/src/common/CMakeLists.txt
+++ b/internal/core/src/common/CMakeLists.txt
@@ -26,7 +26,11 @@ set(COMMON_SRC
         RegexQuery.cpp
         )
 
-add_library(milvus_common SHARED ${COMMON_SRC})
+if(APPLE)
+    add_library(milvus_common STATIC ${COMMON_SRC})
+else()
+    add_library(milvus_common SHARED ${COMMON_SRC})
+endif()
 
 target_link_libraries(milvus_common
         milvus_bitset
