--- a/internal/core/src/bitset/CMakeLists.txt
+++ b/internal/core/src/bitset/CMakeLists.txt
@@ -38,4 +38,8 @@ elseif (${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm*")
     #set_source_files_properties(detail/platform/arm/sve-inst.cpp PROPERTIES COMPILE_FLAGS "-mcpu=neoverse-v1")
 endif()
 
-add_library(milvus_bitset ${BITSET_SRCS})
+if(APPLE)
+    add_library(milvus_bitset STATIC ${BITSET_SRCS})
+else()
+    add_library(milvus_bitset SHARED ${BITSET_SRCS})
+endif()
