enhance: bind e2e to dedicated nodes
Signed-off-by: Liang Huang <sammy.huang@zilliz.com>

--- a/tests/scripts/values/ci/nightly-one-pod.yaml
+++ b/tests/scripts/values/ci/nightly-one-pod.yaml
@@ -2,6 +2,14 @@ metrics:
   serviceMonitor:
     enabled: true
 
+nodeSelector: 
+ node-role.kubernetes.io/e2e: ""
+
+tolerations:
+- key: "node-role.kubernetes.io/e2e"
+  operator: "Exists"
+  effect: "NoSchedule"  
+
 cluster:
   enabled: false
 etcd:
