--- a/tests/scripts/values/ci/pr.yaml
+++ b/tests/scripts/values/ci/pr.yaml
@@ -1,6 +1,15 @@
 metrics:
   serviceMonitor:
     enabled: true
+
+nodeSelector: 
+ node-role.kubernetes.io/e2e: ""
+
+tolerations:
+- key: "node-role.kubernetes.io/e2e"
+  operator: "Exists"
+  effect: "NoSchedule"  
+
 log:
   level: debug
 proxy:
