--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -455,6 +455,8 @@ dataCoord:
       preferSegmentSize: 64m       
       maxSegmentSize: 128m
       maxTrainSize: 25g # max data size in analyze, if data is larger than it, will down sampling to meet this limit
+      maxCentroidsNum: 10240
+      minCentroidsNum: 128
 
     levelzero:
       forceTrigger:
