enhance: bind e2e to dedicated nodes (#32579)
pr:#32600

---------

Signed-off-by: Liang Huang <sammy.huang@zilliz.com>

--- a/tests/scripts/values/ci/pr.yaml
+++ b/tests/scripts/values/ci/pr.yaml
@@ -1,6 +1,15 @@
 metrics:
   serviceMonitor:
     enabled: true
+
+nodeSelector: 
+ node-role.kubernetes.io/e2e: ""
+
+tolerations:
+- key: "node-role.kubernetes.io/e2e"
+  operator: "Exists"
+  effect: "NoSchedule"  
+
 log:
   level: debug
 proxy:
@@ -64,6 +73,13 @@ pulsar:
   components:
     autorecovery: false
   proxy:
+    nodeSelector:
+      node-role.kubernetes.io/e2e: ""
+
+    tolerations:
+    - key: "node-role.kubernetes.io/e2e"
+      operator: "Exists"
+      effect: "NoSchedule"
     configData:
       PULSAR_MEM: >
         -Xms1024m -Xmx1024m
@@ -80,6 +96,13 @@ pulsar:
         memory: "100Mi"
         cpu: "0.1"
   broker:
+    nodeSelector:
+      node-role.kubernetes.io/e2e: ""
+
+    tolerations:
+    - key: "node-role.kubernetes.io/e2e"
+      operator: "Exists"
+      effect: "NoSchedule"
     resources:
       requests:
         cpu: "0.5"
@@ -108,6 +131,13 @@ pulsar:
       backlogQuotaDefaultRetentionPolicy: producer_exception
 
   bookkeeper:
+    nodeSelector:
+      node-role.kubernetes.io/e2e: ""
+
+    tolerations:
+    - key: "node-role.kubernetes.io/e2e"
+      operator: "Exists"
+      effect: "NoSchedule"
     configData:
       PULSAR_MEM: >
         -Xms4096m
@@ -135,6 +165,13 @@ pulsar:
         memory: "4Gi"
 
   zookeeper:
+    nodeSelector:
+      node-role.kubernetes.io/e2e: ""
+
+    tolerations:
+    - key: "node-role.kubernetes.io/e2e"
+      operator: "Exists"
+      effect: "NoSchedule"
     replicaCount: 1
     configData:
       PULSAR_MEM: >
@@ -154,23 +191,49 @@ pulsar:
         cpu: "0.3"
         memory: "512Mi"
 kafka:
+  nodeSelector:
+    node-role.kubernetes.io/e2e: ""
+  tolerations:
+  - key: "node-role.kubernetes.io/e2e"
+    operator: "Exists"
+    effect: "NoSchedule"
+
   resources:
     requests:
       cpu: "0.5"
       memory: "1Gi"
   zookeeper:
+
     replicaCount: 1
     resources:
       requests:
         cpu: "0.3"
         memory: "512Mi"
 etcd:
+  nodeSelector:
+    node-role/nvme: "true"
+    node-role.kubernetes.io/e2e: ""
+
+  tolerations:
+  - key: "node-role.kubernetes.io/e2e"
+    operator: "Exists"
+    effect: "NoSchedule"
+
+
   replicaCount: 1
   resources:
     requests:
       cpu: "0.3"
       memory: "100Mi"
 minio:
+  nodeSelector:
+    node-role.kubernetes.io/e2e: ""
+
+  tolerations:
+  - key: "node-role.kubernetes.io/e2e"
+    operator: "Exists"
+    effect: "NoSchedule"
+
   resources:
     requests:
       cpu: "0.3"
