--- a/tests/scripts/values/ci/pr-4am.yaml
+++ b/tests/scripts/values/ci/pr-4am.yaml
@@ -3,6 +3,15 @@ metrics:
     enabled: true
 log:
   level: debug
+
+nodeSelector: 
+ node-role.kubernetes.io/e2e: ""
+
+tolerations:
+- key: "node-role.kubernetes.io/e2e"
+  operator: "Exists"
+  effect: "NoSchedule"  
+
 proxy:
   resources:
     requests:
@@ -64,6 +73,13 @@ pulsar:
   components:
     autorecovery: false
   proxy:
+    nodeSelector:
+      node-role.kubernetes.io/e2e: ""
+
+    tolerations:
+    - key: "node-role.kubernetes.io/e2e"
+      operator: "Exists"
+      effect: "NoSchedule"
     configData:
       PULSAR_MEM: >
         -Xms1024m -Xmx1024m
@@ -80,6 +96,13 @@ pulsar:
         memory: "100Mi"
         cpu: "0.1"
   broker:
+    nodeSelector:
+      node-role.kubernetes.io/e2e: ""
+
+    tolerations:
+    - key: "node-role.kubernetes.io/e2e"
+      operator: "Exists"
+      effect: "NoSchedule"
     resources:
       requests:
         cpu: "0.5"
@@ -108,6 +131,13 @@ pulsar:
       backlogQuotaDefaultRetentionPolicy: producer_exception
 
   bookkeeper:
+    nodeSelector:
+      node-role.kubernetes.io/e2e: ""
+
+    tolerations:
+    - key: "node-role.kubernetes.io/e2e"
+      operator: "Exists"
+      effect: "NoSchedule"
     configData:
       PULSAR_MEM: >
         -Xms4096m
@@ -135,6 +165,13 @@ pulsar:
         memory: "4Gi"
 
   zookeeper:
+    nodeSelector:
+      node-role.kubernetes.io/e2e: ""
+
+    tolerations:
+    - key: "node-role.kubernetes.io/e2e"
+      operator: "Exists"
+      effect: "NoSchedule"
     replicaCount: 1
     configData:
       PULSAR_MEM: >
@@ -154,6 +191,13 @@ pulsar:
         cpu: "0.3"
         memory: "512Mi"
 kafka:
+  nodeSelector:
+    node-role.kubernetes.io/e2e: ""
+  tolerations:
+  - key: "node-role.kubernetes.io/e2e"
+    operator: "Exists"
+    effect: "NoSchedule"
+
   resources:
     requests:
       cpu: "0.5"
@@ -166,13 +210,29 @@ kafka:
         memory: "512Mi"
 etcd:
   nodeSelector:
-    nvme: "true"
+    node-role/nvme: "true"
+    node-role.kubernetes.io/e2e: ""
+
+  tolerations:
+  - key: "node-role.kubernetes.io/e2e"
+    operator: "Exists"
+    effect: "NoSchedule"
+
+
   replicaCount: 1
   resources:
     requests:
       cpu: "0.3"
       memory: "100Mi"
 minio:
+  nodeSelector:
+    node-role.kubernetes.io/e2e: ""
+
+  tolerations:
+  - key: "node-role.kubernetes.io/e2e"
+    operator: "Exists"
+    effect: "NoSchedule"
+
   resources:
     requests:
       cpu: "0.3"
