enhance: use soft node affinity instead of hard nodeSelector
Signed-off-by: Liang Huang <sammy.huang@zilliz.com>

--- a/tests/scripts/values/ci/nightly-one-pod.yaml
+++ b/tests/scripts/values/ci/nightly-one-pod.yaml
@@ -2,8 +2,14 @@ metrics:
   serviceMonitor:
     enabled: true
 
-nodeSelector: 
- node-role.kubernetes.io/e2e: ""
+affinity:
+  nodeAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+    - weight: 1
+      preference:
+        matchExpressions:
+        - key: "node-role.kubernetes.io/e2e"
+          operator: "Exists"
 
 tolerations:
 - key: "node-role.kubernetes.io/e2e"
