enhance: support bitmap index for scalar type
Signed-off-by: luzhang <luzhang@zilliz.com>

--- a/internal/core/src/index/CMakeLists.txt
+++ b/internal/core/src/index/CMakeLists.txt
@@ -19,6 +19,7 @@ set(INDEX_FILES
         ScalarIndexSort.cpp
         SkipIndex.cpp
         InvertedIndexTantivy.cpp
+        BitmapIndex.cpp
         )
 
 milvus_add_pkg_config("milvus_index")
