feat: Add `milvusclient` package and migrate GoSDK
Related to #31293

Signed-off-by: Congqi Xia <congqi.xia@zilliz.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'scripts/**'
       - 'internal/**'
+      - 'client/**'
       - 'pkg/**'
       - 'cmd/**'
       - 'build/**'
@@ -24,6 +25,7 @@ on:
       - 'scripts/**'
       - 'internal/**'
       - 'pkg/**'
+      - 'client/**'
       - 'cmd/**'
       - 'build/**'
       - 'tests/integration/**' # run integration test
