Trigger code check for client pkg
Signed-off-by: Congqi Xia <congqi.xia@zilliz.com>

--- a/.github/workflows/mac.yaml
+++ b/.github/workflows/mac.yaml
@@ -11,6 +11,7 @@ on:
       - 'scripts/**'
       - 'internal/**'
       - 'pkg/**'
+      - 'client/**'
       - 'cmd/**'
       - 'build/**'
       - 'tests/integration/**'
