enhance: refactor segcore plan executor module
Signed-off-by: luzhang <luzhang@zilliz.com>

--- a/internal/core/src/exec/CMakeLists.txt
+++ b/internal/core/src/exec/CMakeLists.txt
@@ -24,6 +24,10 @@ set(MILVUS_EXEC_SRCS
         expression/ExistsExpr.cpp
         operator/FilterBits.cpp
         operator/Operator.cpp
+        operator/MvccNode.cpp
+        operator/VectorSearch.cpp
+        operator/CountNode.cpp
+        operator/GroupByOperator.cpp
         Driver.cpp
         Task.cpp
         )
