--- a/internal/core/unittest/CMakeLists.txt
+++ b/internal/core/unittest/CMakeLists.txt
@@ -59,6 +59,7 @@ set(MILVUS_TEST_FILES
         test_offset_ordered_array.cpp
         test_always_true_expr.cpp
         test_plan_proto.cpp
+        test_plan.cpp
         test_chunk_cache.cpp
         test_binlog_index.cpp
         test_storage.cpp
