enhance: async cgo utility
- implement future-based cgo utility.

Signed-off-by: chyezh <chyezh@outlook.com>

--- a/internal/core/CMakeLists.txt
+++ b/internal/core/CMakeLists.txt
@@ -299,6 +299,11 @@ install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/common/
         FILES_MATCHING PATTERN "*_c.h"
 )
 
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/futures/
+        DESTINATION include/futures
+        FILES_MATCHING PATTERN "*.h"
+)
+
 install(DIRECTORY ${CMAKE_BINARY_DIR}/lib/
         DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
 )
