--- a/internal/core/src/CMakeLists.txt
+++ b/internal/core/src/CMakeLists.txt
@@ -34,3 +34,4 @@ add_subdirectory( segcore )
 add_subdirectory( indexbuilder )
 add_subdirectory( exec )
 add_subdirectory( bitset )
+add_subdirectory( futures )
