enhance: async cgo utility
- implement future-based cgo utility.

Signed-off-by: chyezh <chyezh@outlook.com>

--- a/internal/core/src/CMakeLists.txt
+++ b/internal/core/src/CMakeLists.txt
@@ -35,3 +35,4 @@ add_subdirectory( indexbuilder )
 add_subdirectory( clustering )
 add_subdirectory( exec )
 add_subdirectory( bitset )
+add_subdirectory( futures )
