--- a/tests/python_client/deploy/milvus_crd.yaml
+++ b/tests/python_client/deploy/milvus_crd.yaml
@@ -2,7 +2,7 @@
 apiVersion: milvus.io/v1beta1
 kind: Milvus
 metadata:
-  name: resource-group-test
+  name: operator-demo
   namespace: chaos-testing
   labels:
     app: milvus
