--- a/tests/restful_client_v2/pytest.ini
+++ b/tests/restful_client_v2/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --strict --endpoint http://10.104.30.207:19530 --token root:Milvus --minio_host 127.0.0.1 --log-cli-level=DEBUG --capture=no
+addopts = --strict --endpoint http://127.0.0.1:19530 --token root:Milvus --minio_host 127.0.0.1
 
 log_format = [%(asctime)s - %(levelname)s - %(name)s]: %(message)s (%(filename)s:%(lineno)s)
 log_date_format = %Y-%m-%d %H:%M:%S
