Fix ruleguard go.mod
Signed-off-by: Congqi Xia <congqi.xia@zilliz.com>

--- a/client/.golangci.yml
+++ b/client/.golangci.yml
@@ -91,7 +91,7 @@ linters-settings:
     settings:
       ruleguard:
         failOnError: true
-        rules: "../rules.go"
+        rules: "ruleguard/rules.go"
   depguard:
     rules:
       main:
