enhance: optimize bitmap index
Signed-off-by: luzhang <luzhang@zilliz.com>

--- a/internal/core/src/index/CMakeLists.txt
+++ b/internal/core/src/index/CMakeLists.txt
@@ -20,6 +20,7 @@ set(INDEX_FILES
         SkipIndex.cpp
         InvertedIndexTantivy.cpp
         BitmapIndex.cpp
+        HybridScalarIndex.cpp
         )
 
 milvus_add_pkg_config("milvus_index")
