enhance: add more unittest, add metric, remove blockUntilRelease
Signed-off-by: chyezh <chyezh@outlook.com>

--- a/internal/core/src/futures/CMakeLists.txt
+++ b/internal/core/src/futures/CMakeLists.txt
@@ -12,6 +12,7 @@
 milvus_add_pkg_config("milvus_futures")
 
 set(FUTURES_SRC
+        Executor.cpp
         future_c.cpp
         future_test_case_c.cpp
         )
