--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -482,8 +482,7 @@ dataCoord:
     serverMaxRecvSize: 268435456
     clientMaxSendSize: 268435456
     clientMaxRecvSize: 536870912
-  sync:
-    interval: 600
+  syncSegmentsInterval: 300
 
 dataNode:
   dataSync:
