--- a/internal/core/src/segcore/CMakeLists.txt
+++ b/internal/core/src/segcore/CMakeLists.txt
@@ -24,8 +24,6 @@ set(SEGCORE_FILES
         SegmentGrowingImpl.cpp
         SegmentSealedImpl.cpp
         FieldIndexing.cpp
-        Reduce.cpp
-        StreamReduce.cpp
         metrics_c.cpp
         plan_c.cpp
         reduce_c.cpp
@@ -39,7 +37,10 @@ set(SEGCORE_FILES
         Utils.cpp
         ConcurrentVector.cpp
         ReduceUtils.cpp
-        check_vec_index_c.cpp)
+        check_vec_index_c.cpp
+        reduce/Reduce.cpp
+        reduce/StreamReduce.cpp
+        reduce/GroupReduce.cpp)
 add_library(milvus_segcore SHARED ${SEGCORE_FILES})
 
 target_link_libraries(milvus_segcore milvus_query milvus_bitset milvus_exec ${OpenMP_CXX_FLAGS} milvus-storage milvus_futures)
