--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@ internal/proto/**/*.pb.go
 internal/core/src/pb/*.pb.h
 internal/core/src/pb/*.pb.cc
 **/legacypb/*.pb.go
+cmd/tools/migration/backend/*.pb.go
