enhence: check index with data type
Signed-off-by: cqy123456 <qianya.cheng@zilliz.com>

--- a/internal/core/src/segcore/CMakeLists.txt
+++ b/internal/core/src/segcore/CMakeLists.txt
@@ -38,7 +38,8 @@ set(SEGCORE_FILES
         TimestampIndex.cpp
         Utils.cpp
         ConcurrentVector.cpp
-        ReduceUtils.cpp)
+        ReduceUtils.cpp
+        check_vec_index_c.cpp)
 add_library(milvus_segcore SHARED ${SEGCORE_FILES})
 
 target_link_libraries(milvus_segcore milvus_query milvus_bitset milvus_exec ${OpenMP_CXX_FLAGS} milvus-storage)
