--- a/internal/core/unittest/CMakeLists.txt
+++ b/internal/core/unittest/CMakeLists.txt
@@ -94,7 +94,7 @@ endif()
 if (DEFINED AZURE_BUILD_DIR)
     set(MILVUS_TEST_FILES
                 ${MILVUS_TEST_FILES}
-#                test_azure_chunk_manager.cpp
+                test_azure_chunk_manager.cpp
             #need update aws-sdk-cpp, see more from https://github.com/aws/aws-sdk-cpp/issues/2119
                 #test_remote_chunk_manager.cpp
                 )
