enhance: Set default pursuit mode to false
When meets ttlag > 10s, msgstream will speed up consuming
by entering pursuit mode to pack multiple ttrange into one package.
This behaviour caused:

- Memory accumulating in msgstream & msgdispatcher
- Making it worse if ttlag is caused by BufferManager/SyncMgr

So this PR set it to false by default, open it only when there're tones
of ttmsgs to catch up.

See also: #33676

Signed-off-by: yangxuan <xuan.yang@zilliz.com>

--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -115,7 +115,7 @@ mq:
   # Default value: "default"
   # Valid values: [default, pulsar, kafka, rocksmq, natsmq]
   type: default
-  enablePursuitMode: true # Default value: "true"
+  enablePursuitMode: false # Speed up msgstream consumer so that msgstream can pack msgpack in larger tt range. Set to true if there're many tt msg to pursuit. Default value: "false"
   pursuitLag: 10 # time tick lag threshold to enter pursuit mode, in seconds
   pursuitBufferSize: 8388608 # pursuit mode buffer size in bytes
   mqBufSize: 16 # MQ client consumer buffer length
