--- a/internal/core/unittest/CMakeLists.txt
+++ b/internal/core/unittest/CMakeLists.txt
@@ -66,6 +66,7 @@ set(MILVUS_TEST_FILES
         test_group_by.cpp
         test_regex_query_util.cpp
         test_regex_query.cpp
+        test_array_inverted_index.cpp
         )
 
 if ( BUILD_DISK_ANN STREQUAL "ON" )
