--- a/internal/core/unittest/CMakeLists.txt
+++ b/internal/core/unittest/CMakeLists.txt
@@ -68,6 +68,7 @@ set(MILVUS_TEST_FILES
         test_regex_query_util.cpp
         test_regex_query.cpp
         test_futures.cpp
+        test_array_inverted_index.cpp
         )
 
 if ( INDEX_ENGINE STREQUAL "cardinal" )
